# conceptions

./: README.md
task1/: Assembler.cpp  Assembler.h  CMakeLists.txt  Disassembler.cpp  Disassembler.h  README.md  VirtualMachine.cpp  VirtualMachine.h  description.txt  main.cpp  program.asm  program.disasm
task2/: CMakeLists.txt  Macroses.h  Objects.h  README.md  Tests.h  main.cpp
